--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-ui": "^0.20.0",
     "moment": "^2.19.2",
     "prop-types": "latest",
+    "qrcode.react": "^0.7.2",
     "react": "^16.2.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-day-picker": "^6.2.1",
