--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jss": "latest",
     "jss-preset-default": "latest",
     "material-ui": "^0.20.0",
+    "material-ui-search-bar": "^0.4.1",
     "moment": "^2.19.2",
     "prop-types": "latest",
     "qrcode.react": "^0.7.2",
