--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "material-ui": "^0.20.0",
     "material-ui-search-bar": "^0.4.1",
     "moment": "^2.19.2",
+    "npm": "^5.7.1",
     "prop-types": "latest",
     "qrcode.react": "^0.7.2",
     "react": "^16.2.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-day-picker": "^6.2.1",
     "react-dom": "latest",
+    "react-flexbox-grid": "^2.0.0",
     "react-jss": "latest",
     "react-number-format": "^3.0.2",
+    "react-payment": "^0.1.8",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "latest",
